src/test/ui/parser/issue-68987-unmatch-issue-3.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-68987-unmatch-issue-3.rs:10:1
   |
LL |     match o {
   |             - this delimiter might not be properly closed...
...
LL |         }
   |         - ...as it matches this but it has different indentation
...
LL | }
   | ^ unexpected closing delimiter

error: aborting due to previous error

